5.6: ?/?/2021
	* CORE: Added support for @Entity storing of Serializable types.  Thanks to arn-cpu.
	* ANDROID: Removed the reflection hack support for pre-ice-cream-sandwich annotation performance hacks.

5.5: 5/23/2021
	* CORE: Added support for java.util.Currency.  Thanks to juur. 
	* ANDROID: Fixed bug in AndroidLogBackend.  Thanks to sanderderks.

5.4: 5/18/2021
	* CORE: Added LoggerFactory.setLogFactory() for supporting other log implementations and added NullLog.
	* CORE: Migrated the internal logging code to SimpleLogging.
	* CORE: Updated H2 version which shook lose a couple of issues in tests and core support.
	* CORE: Added UPDATE and DELETE database-dependent support for TOP and LIMIT.  Thanks to juur.
	* JDBC: Fixed NPE in JdbcSingleConnectionSource because of early initialization.  Thanks to Nexxxt99.
	* JDBC: Fixed problem in Postgresql where mixed case sequence names aren't handled right.  Thanks to Nick.
	* JDBC: Added database dependent login-timeout seconds setting to the JdbcConnectionSource. 

5.3: 12/8/2020
	* CORE: More improvements to the TransactionManager connection and savepoint handling.
	* CORE: Added a getInternalConnection() method to DatabaseConnection to access underlying objects.
	* CORE: Added support for ORDER BY ... NULLS FIRST and LAST.  May not be supported by all database types.
	* CORE: Added optimization to AND and OR queries to reduce the parens in the generated query.  Thanks to devjta.
	* CORE: Removed some extraneous spaces from generated queries.
	* CORE: Added missing wiring for the TIME_STAMP_STRING data type for storing Timestamp type as a string.
	* CORE: Added support for OneToMany JPA annotation. Thanks to Bo98.
	* JDBC: Update the DB2 driver class.  Thanks to mauro-palumbo.
	* JDBC: Added support for create table if not exists for HSQLDB versions 2.3.X and greater.  Thanks to lukewhitt.
	* JDBC: Fixed a problem with H2's handling of boolean fields.